# market-validation-agent

./: .env.example  .env_example  .gitignore  AGENTS.md  README.md  alembic.ini  bbq_san_jose_brisket.json  brisket_market_san_jose.json  call-notes.py  lead-pipeline.py  merge-tracker.py  pyproject.toml  store-output.py  verify-pipeline.py
.claude/skills/market-validation/: SKILL.md
.opencode/commands/: market-validation-batch.md  market-validation-call-sheet.md  market-validation-config-check.md  market-validation-dashboard.md  market-validation-email.md  market-validation-merge.md  market-validation-pipeline.md  market-validation-research.md  market-validation-run.md  market-validation-stage-run.md  market-validation-store-output.md  market-validation-verify.md  market-validation-worker.md  market-validation.md
batch/: batch-input.tsv  batch-prompt.md  batch-runner.sh  batch-state.tsv  worker-and-store.sh
batch/output/: brisket-sj-002-lead-qualify.json
config/: lead-pipeline.example.json  lead-pipeline.json
data/: validation-tracker.md
graphify-out/: .graphify_python  ARCHITECTURE.md  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
market_validation/: __init__.py  agent.py  batch_worker.py  company_enrichment.py  competitive_landscape.py  config.py  customer_segments.py  dashboard.py  dashboard_export.py  db_store.py  demand_analysis.py  email.py  email_sender.py  email_tracker.py  engine.py  environment.py  file_pipeline.py  free_data_sources.py  gmail_inbox.py  gmail_tracker.py  lead_pipeline.py  llm.py  log.py  main.py  market_archetype.py  market_signals.py  market_sizing.py  market_trends.py  models.py  multi_search.py  output_store.py  pipeline.py  porters_five_forces.py  profiles.py  query_context.py  research.py  research_export.py  research_manager.py  research_runner.py  schemas.py  (+8 more)
market_validation/_helpers/: __init__.py  archetypes.py  citations.py  common.py  companies.py  contacts.py  enrichment_helpers.py  qualification_helpers.py  quality.py  queries.py  validation_helpers.py
market_validation/api/: __init__.py  __main__.py  app.py  middleware.py  routes.py  schemas.py
market_validation/db/: __init__.py  migrations.py
market_validation/graphify-out/: GRAPH_REPORT.md  graph.json
market_validation/services/: __init__.py  enrichment.py  qualification.py  search.py  validation.py
market_validation/static/: dashboard.css  dashboard.js
market_validation/templates/: dashboard.html
market_validation_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
migrations/: env.py  script.py.mako
migrations/versions/: 2026_04_23_0000-0001_baseline_schema.py
modes/: _shared.md  auto-pipeline.md  batch.md  call-sheet-build.md  lead-qualify.md  outreach-email.md  reply-parse.md  research-ingest.md  validate.md
output/: dashboard.html
output/call-sheets/: 2026-04-10.md
output/dashboard/: summary.md
output/email-queue/: -EidkAqo.json  4ED7mw9w.json  fexrsa07.json  yqZ4rVFU.json
output/leads/: leads.jsonl
output/runs/brisket-auto-001/: research-ingest.json
output/runs/brisket-sj-001/: research-ingest.json
output/runs/brisket-sj-002/: lead-qualify.json  research-ingest.json
scripts/: gap_fill_qualified.py
sources/: brisket-bbq.yaml  general.yaml  restaurants.yaml  tech-saas.yaml
templates/: states.yml
tests/: test_batch_worker.py  test_config.py  test_core.py  test_db_store.py  test_engine_behavior.py  test_environment.py  test_file_pipeline.py  test_lead_pipeline.py  test_market_search_api.py  test_new_helpers.py  test_output_store.py  test_research_service.py  test_run_storage.py  test_validate_api.py
