[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-validation-agent"
version = "0.1.0"
description = "Prompt-driven market validation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0,<2.0.0",
  "pytrends>=4.9.0,<5.0.0",
  "ddgs>=9.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "requests>=2.31.0,<3.0.0",
  "pypdf>=5.0.0",
]

[project.optional-dependencies]
gmail = [
  "google-auth>=2.0.0",
  "google-auth-oauthlib>=1.0.0",
  "google-auth-httplib2>=0.2.0",
  "google-api-python-client>=2.0.0",
]
dev = [
  "pytest>=8.3.0,<9.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["market_validation*"]

[project.scripts]
market-merge-tracker = "market_validation.file_pipeline:main_merge_cli"
market-verify-pipeline = "market_validation.file_pipeline:main_verify_cli"
market-batch-worker = "market_validation.batch_worker:main"
market-output-store = "market_validation.output_store:main"
market-lead-pipeline = "market_validation.lead_pipeline:main"
market-call-notes = "market_validation.db_store:main"
market-source-discover = "market_validation.source_discovery:main"
market-email-send = "market_validation.email_sender:main"
market-email-fetch = "market_validation.gmail_inbox:main"
market-dashboard = "market_validation.dashboard_export:main"
market-dashboard-ui = "market_validation.dashboard:main"
market-research = "market_validation.research:main"
market-research-run = "market_validation.research_runner:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
